--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teams</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Teams Networking</h1>
+    <header>
+      <h1>Teams Networking</h1>
+    </header>
+    <section>table...</section>
+    <footer>
+      <a href="https://github.com/EchilibratuL-2">🧑‍💻Github</a>
+    </footer>
   </body>
 </html>
