--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,22 @@
   </head>
   <body>
     <header>
-      <h1>Teams Networking</h1>
+      <div id="header-wrapper">
+        <div id="my-pictures">
+          <img src="images/network-team-icon.png" width="100px" alt="" />
+        </div>
+        <div id="header-info">
+          <h1>Teams Networking</h1>
+          <h2>
+            CRUD operations example (<strong>C</strong>reate, <strong>R</strong>ead, <strong>U</strong>pdate,
+            <strong>D</strong>elete)
+          </h2>
+        </div>
+      </div>
     </header>
     <section>table...</section>
     <footer>
-      <a href="https://github.com/EchilibratuL-2">🧑‍💻Github</a>
+      <a href="https://github.com/echilibratul-2/teams-networking" target="_blank">👩‍💻 Source Code</a>
     </footer>
   </body>
 </html>
