--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,31 @@
         </div>
       </div>
     </header>
-    <section>table...</section>
+    <section>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Promotion</th>
+            <th>Members</th>
+            <th>Project Name</th>
+            <th>Project URL</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>won15</td>
+            <td>Noi</td>
+            <td>Teams</td>
+            <td>github</td>
+            <td>x</td>
+          </tr>
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+      </table>
+    </section>
     <footer>
       <a href="https://github.com/echilibratul-2/teams-networking" target="_blank">👩‍💻 Source Code</a>
     </footer>
