--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <section>
-      <table border="1">
+      <table id="teamsTable" border="1">
         <thead>
           <tr>
             <th>Promotion</th>
@@ -31,18 +31,8 @@
             <th></th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>won15</td>
-            <td>Noi</td>
-            <td>Teams</td>
-            <td>github</td>
-            <td>x</td>
-          </tr>
-        </tbody>
-        <tfoot>
-
-        </tfoot>
+        <tbody></tbody>
+        <tfoot></tfoot>
       </table>
     </section>
     <footer>
