--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       </div>
     </header>
     <section>
+      <form action="secretary.html" method="post">
       <table id="teamsTable" border="1">
         <thead>
           <tr>
@@ -32,7 +33,27 @@
           </tr>
         </thead>
         <tbody></tbody>
-        <tfoot></tfoot>
+        <tfoot>
+          <tr>
+            <td>
+              <input type="text" name="promotion" id="promotion" placeholder="Enter promotion" required/>
+            </td>
+            <td>
+              <input type="text" name="members" id="members" placeholder="Enter members" required/>
+            </td>
+            <td>
+              <input type="text" name="name" id="name" placeholder="Enter name" required/>
+            </td>
+            <td>
+              <input type="text" name="url" id="url" placeholder="Enter project url" required/>
+            </td>
+            <td>
+              <button type="submit">💾</button>
+              <button type="reset">❌</button>
+            </td>
+          </tr>
+        </form>
+        </tfoot>
       </table>
     </section>
     <footer>
