--- a/src/index.html
+++ b/src/index.html
@@ -21,40 +21,40 @@
       </div>
     </header>
     <section>
-      <form action="secretary.html" method="post">
-      <table id="teamsTable" border="1">
-        <thead>
-          <tr>
-            <th>Promotion</th>
-            <th>Members</th>
-            <th>Project Name</th>
-            <th>Project URL</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-        <tfoot>
-          <tr>
-            <td>
-              <input type="text" name="promotion" id="promotion" placeholder="Enter promotion" required/>
-            </td>
-            <td>
-              <input type="text" name="members" id="members" placeholder="Enter members" required/>
-            </td>
-            <td>
-              <input type="text" name="name" id="name" placeholder="Enter name" required/>
-            </td>
-            <td>
-              <input type="text" name="url" id="url" placeholder="Enter project url" required/>
-            </td>
-            <td>
-              <button type="submit">💾</button>
-              <button type="reset">❌</button>
-            </td>
-          </tr>
-        </form>
-        </tfoot>
-      </table>
+      <form id="teamsForm" method="get">
+        <table id="teamsTable" border="1">
+          <thead>
+            <tr>
+              <th>Promotion</th>
+              <th>Members</th>
+              <th>Project Name</th>
+              <th>Project URL</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+          <tfoot>
+            <tr>
+              <td>
+                <input type="text" name="promotion" id="promotion" placeholder="Enter promotion" required />
+              </td>
+              <td>
+                <input type="text" name="members" id="members" placeholder="Enter members" required />
+              </td>
+              <td>
+                <input type="text" name="name" id="name" placeholder="Enter name" required />
+              </td>
+              <td>
+                <input type="text" name="url" id="url" placeholder="Enter project url" required />
+              </td>
+              <td>
+                <button type="submit">💾</button>
+                <button type="reset">❌</button>
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+      </form>
     </section>
     <footer>
       <a href="https://github.com/echilibratul-2/teams-networking" target="_blank">👩‍💻 Source Code</a>
